<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="OP90_MP" Id="{ebbfb5a4-d9b0-4f41-b29a-79882856538b}">
    <Declaration><![CDATA[
VAR_GLOBAL
I90_PMR_FB_I400_0				:BOOL;
I90_SURGE_ARRES_FB_I400_1       :BOOL;
I90_DOOR1_CLOSE_FB_I400_2       :BOOL;
I90_DOOR2_CLOSE_FB_I400_3       :BOOL;
I90_DOOR3_CLOSE_FB_I400_4       :BOOL;
I90_DOOR4_CLOSE_FB_I400_5       :BOOL;
I90_DOOR5_CLOSE_FB_I400_6       :BOOL;
I90_DOOR6_CLOSE_FB_I400_7       :BOOL;
I90_DOOR7_CLOSE_FB_I401_0       :BOOL;
I90_DOOR8_CLOSE_FB_I401_1       :BOOL;
I90_DOOR9_CLOSE_FB_I401_2       :BOOL;
I90_DOOR10_CLOSE_FB_I401_3      :BOOL;
I90_DOOR11_CLOSE_FB_I401_4      :BOOL;
I90_DOOR12_CLOSE_FB_I401_5      :BOOL;
I90_DOOR13_CLOSE_FB_I401_6      :BOOL;
I90_DOOR14_CLOSE_FB_I401_7      :BOOL;

I90_DOOR15_CLOSE_FB_I402_0      :BOOL;
I90_DOOR16_CLOSE_FB_I402_1      :BOOL;
I110_RESRVR_LW_LVL_I402_2       :BOOL;
I110_OILTANK_PRES_SW_FB_I402_3  :BOOL;
I120_ATC_DECLAMP_FB_I402_4      :BOOL;
I120_ATC_CLAMP_FB_I402_5        :BOOL;
I120_ATC_STN_POKE_YOKE_1_I402_6 :BOOL;
I120_ATC_STN_POKE_YOKE_2_I402_7 :BOOL;
I120_ATC_STN_POKE_YOKE_3_I403_0 :BOOL;
I120_ATC_STN_POKE_YOKE_4_I403_1 :BOOL;
I120_ATC_SLAVE_MODL1_I403_2     :BOOL;
I120_ATC_SLAVE_MODL2_I403_3     :BOOL;
I120_SPARE_I403_4               :BOOL;
I120_SPARE_I403_5               :BOOL;
I120_SPARE_I403_6               :BOOL;
I90_RESET_FB_I403_7             :BOOL;

I90_LHS_ESTOP1_FB_I404_0        :BOOL;
I90_LHS_ESTOP2_FB_I404_1        :BOOL;
I90_LHS_ESTOP3_FB_I404_2        :BOOL;
I90_RHS_ESTOP1_FB_I404_3        :BOOL;
I90_RHS_ESTOP2_FB_I404_4        :BOOL;
I90_RHS_ESTOP3_FB_I404_5        :BOOL;
I90_SPARE_I404_6                :BOOL;
I90_SPARE_I404_7                :BOOL;
I90_XTS_48VSMPS1_DC_OK_I405_0   :BOOL;
I90_XTS_48VSMPS2_DC_OK_I405_1   :BOOL;
I90_XTS_48VSMPS3_DC_OK_I405_2   :BOOL;
I90_XTS_24VSMPS_DC_OK_I405_3    :BOOL;
I120_LH_LOCKSPRING_GRPR_CLSE_I405_4:BOOL;
I120_LH_LOCKSPRING_GRPR_OPN_I405_5 :BOOL;
I120_RH_LOCKSPRING_GRPR_CLSE_I405_6 :BOOL;
I120_RH_LOCKSPRING_GRPR_OPN_I405_7 :BOOL;

O90_VISN_LGHT1_ON_Q400_0        :BOOL;
O90_VISN_LGHT2_ON_Q400_1        :BOOL;
O90_LH_DOOR_OPN_Q400_2          :BOOL;
O90_RH_DOOR_OPN_Q400_3          :BOOL;
O90_FRNT_DOOR_OPN_Q400_4        :BOOL;
O90_BACK_DOOR_OPN_Q400_5        :BOOL;
O90_IPC_P_S_Q400_6              :BOOL;
O90_SPARE_Q400_7                :BOOL;
O90_SPARE_Q401_0                :BOOL;
O90_SPARE_Q401_1                :BOOL;
O90_SPARE_Q401_2                :BOOL;
O90_SPARE_Q401_3                :BOOL;
O110_RH_OIL_DISPN_FRL_VLVE_ON_Q401_4   :BOOL;
O20_RH_OIL_DISPN_FRL_VLVE_ON_Q401_5    :BOOL;
O110_LH_OIL_DISPN_FRL_VLVE_ON_Q401_6   :BOOL;
O20_LH_OIL_DISPN_FRL_VLVE_ON_Q401_7    :BOOL;

O110_SPARE_Q402_0               :BOOL;
O110_SPARE_Q402_1               :BOOL;
O110_SPARE_Q402_2               :BOOL;
O110_SPARE_Q402_3               :BOOL;
O120_VISN_LGHT1_ON_Q402_4       :BOOL;
O120_VISN_LGHT2_ON_Q402_5       :BOOL;
O120_BARLIGHT_OP1_Q402_6        :BOOL;
O120_BARLIGHT_OP2_Q402_7        :BOOL;
O120_TWR_LMP_RD_Q403_0          :BOOL;
O120_TWR_LMP_GN_Q403_1          :BOOL;
O120_TWR_LMP_YELW_Q403_2        :BOOL;
O120_TWR_LMP_BUZZ_Q403_3        :BOOL;
O120_SPARE_Q403_4               :BOOL;
O120_SPARE_Q403_5               :BOOL;
O120_SPARE_Q403_6               :BOOL;
O120_SPARE_Q403_7               :BOOL;	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>